--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
             <!-- <div class="shamim-links">
                 <ul>
-                    <a href="https://github.com/ShamimHosen75" target="_blank">Github <i 
+                    <a href="#" target="_blank">Github <i 
                             class="fa fa-github"
                             aria-hidden="true" style="color:red; padding-right: 5px;
                         "></i>
