--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!-- my social link animation -->
             <div class="shamim-links">
                 <ul class="focus-in-expand">
-                    <a href="https://github.com/ShamimHosen75"
+                    <a href="#"
                             target="_blank">Github <i 
                             class="fa fa-github"
                             aria-hidden="true"
@@ -95,7 +95,7 @@
                       padding-right: 5px;">
                       </i></a>
 
-                      <a href="https://www.facebook.com/profile.php?id=100008552610425"
+                      <a href="https://www.facebook.com/Shamimdevos"
                       target="_blank"
                       style="padding-left: 5px;">Facebook
                              <i class="fa fa-Facebook"
